--- a/NYBistro/app/views/creditcardinfo.xml
+++ b/NYBistro/app/views/creditcardinfo.xml
@@ -25,9 +25,10 @@
 					<Label class="textformat" id="lblexpiry" text="Expiry Date:" />
 					<Button id="btnShowExpDate" left="180" width="21" height="14" backgroundImage="/images/downarraow.png" />
 				</View>
+						
 				<View id="pickerView" top="8" height="0.1" width="300" borderWidth="1" borderRadius="5" >
 					<Picker id="pickerExpDate" type="Ti.UI.PICKER_TYPE_DATE" selectionIndicator="true" />
-				</View>
+				</View>				
 				
 				<Label class="textformat" id="lblcvv" text="CVV:" />
 				<TextField class="textfield" id="txtcvv" width="100" _tag="1" />
@@ -58,10 +59,10 @@
 		<ScrollView height="100%" showHorizontalScrollIndicator="false" showVerticalScrollIndicator="true">
 			<View id="containerView" backgroundColor="#ffffff" layout="vertical" height="Ti.UI.SIZE">
 				<Label class="textformatdroid" id="lblFirstName" text="First Name:" />
-				<TextField class="textfieldroid" id="txtfirstname" color="black" />
+				<TextField class="textfieldroid" id="txtfirstname" />
 				
 				<Label class="textformatdroid" id="lblLastName" text="Last Name:" />
-				<TextField class="textfieldroid" id="txtlasttname" color="black" />
+				<TextField class="textfieldroid" id="txtlasttname" />
 				
 				<Label class="textformatdroid" id="lblcardtype" text="Card Type:" />
 				<View id="creditOptions" top="5" width="453" height="50" layout="horizontal"  borderRadius="10" borderColor="blue" borderWidth="1">
@@ -71,30 +72,40 @@
 				</View>
 				
 				<Label class="textformatdroid" id="lblccnumber" text="Card Number:" />
-				<TextField class="textfieldroid" id="txtcardnumber" color="black" />
+				<TextField class="textfieldroid" id="txtcardnumber" />
+				
+				<!--
+				<View id="expDateView" top="8" height="Ti.UI.SIZE" layout="horizontal">
+									<Label class="textformatdroid" id="lblexpiry" text="Expiry Date:" />
+									<Button id="btnShowExpDate" left="180" width="21" height="14" backgroundImage="/aimages/downarraow.png" />
+								</View>
+								<View id="pickerView" top="8" height="0.1" width="300" borderWidth="1" borderRadius="5" >
+									<Picker id="pickerExpDate" type="Ti.UI.PICKER_TYPE_DATE" selectionIndicator="true" />
+								</View>-->
+				
+				
 				
 				<View id="expDateView" top="8" height="Ti.UI.SIZE" layout="horizontal">
-					<Label class="textformatdroid" id="lblexpiry" text="Expiry Date:" />
-					<Button id="btnShowExpDate" left="180" width="21" height="14" backgroundImage="/aimages/downarraow.png" />
+					<Label class="textformatdroid" id="lblexpiry" text="Expiry Date:"/>
+					<TextField class="textfieldroid" id="txtDate" width="200" left="20"/>
+					<Button id="btnShowExpDate" top="8" height="45" width="30" backgroundImage ="/aimages/btndownarrowbkg.png"/>
 				</View>
-				<View id="pickerView" top="8" height="0.1" width="300" borderWidth="1" borderRadius="5" >
-					<Picker id="pickerExpDate" type="Ti.UI.PICKER_TYPE_DATE" selectionIndicator="true" />
-				</View>
+				
 				
 				<Label class="textformatdroid" id="lblcvv" text="CVV:" />
-				<TextField class="textfieldroid" id="txtcvv" width="100" color="black" />
+				<TextField class="textfieldroid" id="txtcvv" width="100" />
 				
 				<Label class="textformatdroid" id="lblbillingaddr" text="Billing Address:" />
-				<TextField class="textfieldroid" id="txtbillingaddr" color="black" />
+				<TextField class="textfieldroid" id="txtbillingaddr" />
 				
 				<Label class="textformatdroid" id="lblcity" text="City:" />
-				<TextField class="textfieldroid" id="txtcity" color="black" />
+				<TextField class="textfieldroid" id="txtcity" />
 				
 				<Label class="textformatdroid" id="lblstate" text="State:" />
-				<TextField class="textfieldroid" id="txtstate" color="black" />
+				<TextField class="textfieldroid" id="txtstate" />
 				
 				<Label class="textformatdroid" id="lblzip" text="Zip Code:" />
-				<TextField class="textfieldroid" id="txtzip" color="black" />
+				<TextField class="textfieldroid" id="txtzip" />
 				
 				<View id="saveccInfo" top="8" left="8" height="Ti.UI.SIZE" layout="horizontal">
 					<Button id="btnChkBox" backgroundImage="/aimages/squarechkboxbkg.png" width="19.5" height="18.5" />
@@ -104,5 +115,8 @@
 				<Button id="btnSubmit" backgroundImage="/aimages/btnsubmitbkg.png" top="10" width="103" height="36" />
 			</View>
 		</ScrollView>
+		<View id="datePickerView" height="251" width="80%" bottom="-251" >
+				<Picker id="datePicker"/>
+		</View>
 	</Window>
 </Alloy>
