--- a/NYBistro/app/views/itemdetails.xml
+++ b/NYBistro/app/views/itemdetails.xml
@@ -21,23 +21,26 @@
 		</ScrollView>
 	</Window>
 	
-		<Window class="containerandroid" id='winItemDetails' model="$.menuItemDetails" dataTransform="dataTransformation" platform="android" statusBarHidden="false" navBarHidden= "false" >
+	<Window class="containerandroid" id='winItemDetails' model="$.menuItemDetails" dataTransform="dataTransformation" platform="android" statusBarHidden="false" navBarHidden= "false" >
 		<ScrollView id="scrollView" showVerticalScrollIndicator="true" showshowHorizontalScrollIndicator="false"  width="100%" height="100%">
 			<View id="containerView" backgroundColor="white" height="100%" width="100%">
-				<ImageView id="foodBkg" image="/aimages/detailfoodimgbkg.png" width="580" height="370" top="0"/>
-				<ImageView id="imgFood" image="/aimages/detailsfoodimage.png" width="470" height="340" top="10"/>
-				<ImageView id="contentBkg" image="/aimages/profilebg.png" width="580" height="95" top="370" />
+				<ImageView id="foodBkg" image="/aimages/detailfoodimgbkg.png" width="580" height="230" top="0"/>
+				<ImageView id="imgFood" image="/aimages/detailsfoodimage.png" width="350" height="210" top="10"/>
+				
+				<ImageView id="contentBkg" image="/aimages/profilebg.png" width="580" height="60" top="230" />
 				<Label class="priceandroid" id="lblPrice" text="{$.menuItemDetails.Price}"/>
-				<Label class="textandroid" id="lblFoodName" top="381" left="70" text="{$.menuItemDetails.Name}"/>
-				<ImageView id="smallFoodImg" image="/aimages/item1.png" width="60" height="60" top="381" left="7" />
+				<Label class="textandroid" id="lblFoodName" top="235" left="60" text="{$.menuItemDetails.Name}"/>
+				<ImageView id="smallFoodImg" image="/aimages/item1.png" width="50" height="50" top="235" left="5" />
 				<Label class="shortdescandroid" id="lblDesc" text="{$.menuItemDetails.Description}"	/>
-				<Label class="textandroid" id="lblQntyLabel" text="Quantity:" top="515" left="7" />
+				
+				<Label class="textandroid" id="lblQntyLabel" text="Quantity:" top="306" left="5" />
 				<Label class ="quantityand" id="lblQtyNum" text="1" />
-				<Button id="btnAdd" backgroundImage="/aimages/qtyadditionbkg.png" top="496" left="130" height="35" width="45" />
-				<Button id="btnSub" backgroundImage="/aimages/qtysubtractionbkg.png" top="531" left="130" height="35" width="45" />
-				<Button id="btnAddtoCart" backgroundImage="/aimages/addbutton.png" top="501" left="190" height="60" width="90">
-				<Label class="textformat" id="lblSplInstruct" text="Specific Instructions (If Any):" top="560" left="7" />
-				<TextArea id="txtSpecInstruct" backgroundImage="/aimages/specificinstrbkg.png" color="black" height="223" width="470" top="580" left="7" borderRadius="5" borderWidth="1" windowSoftInputMode="Ti.UI.Android.SOFT_INPUT_ADJUST_PAN"/>
+				<Button id="btnAdd" backgroundImage="/aimages/qtyadditionbkg.png" top="295" left="90" height="20" width="30" />
+				<Button id="btnSub" backgroundImage="/aimages/qtysubtractionbkg.png" top="315" left="90" height="20" width="30" />
+				<Button id="btnAddtoCart" backgroundImage="/aimages/addbutton.png" top="295" left="130" height="40" width="60">
+				
+				<Label class="textandroid" id="lblSplInstruct" text="Specific Instructions (If Any):" top="345" left="7" />
+				<TextArea id="txtSpecInstruct" backgroundImage="/aimages/specificinstrbkg.png" color="black" height="150" width="300" top="360" left="5" borderRadius="5" borderWidth="1" windowSoftInputMode="Ti.UI.Android.SOFT_INPUT_ADJUST_PAN"/>
 			</View>	
 		</ScrollView>
 	</Window>
